# algomancer

./: .gitignore  Cargo.toml  README.md  action_space.md  game_data.json  progression.md  requirements.md  requirements.txt
algocore/: Cargo.toml
algocore/src/: affinity.rs  card_type.rs  cost.rs  faction.rs  lib.rs  resource_type.rs  timing.rs
algomacros/: Cargo.toml
algomacros/src/: lib.rs
algomanserver/: Cargo.toml
algomanserver/src/: lib.rs
algomanserver/src/coordinator/: agent.rs  lobby.rs  mod.rs
algomanserver/src/runner/: client.rs  controller.rs  mod.rs
algoserver/: Cargo.toml  build.rs
algoserver/src/: client.rs  server.rs
algoserver/src/coordinator/: agent.rs  lobby.rs  mod.rs  service.rs
algoserver/src/proto/: algomancer.proto  game_service.proto  gameservice.proto
algoserver/src/runner/: mod.rs
cli/: Cargo.toml
cli/src/: json_value_parser.rs  main.rs  parser.rs
cli/src/parser/: actions.rs  new.rs
database/: Cargo.toml
database/src/: lib.rs  parser.rs
game_rules_engine/: Cargo.toml  build.rs
game_rules_engine/src/: lib.rs  wrap_index.rs
game_rules_engine/src/game/: action.rs  db.rs  game_builder.rs  mod.rs  state.rs  state_based_actions.rs
game_rules_engine/src/game/action/: attack.rs  combat.rs  draft.rs  mana_phase_actions.rs  pass_priority.rs  play_card.rs  recycle_for_resource.rs
game_rules_engine/src/game/state/: card.rs  card_collection.rs  cost.rs  deck.rs  discard.rs  effect.rs  error.rs  faction.rs  formation.rs  mutation.rs  permanent.rs  player.rs  progression.rs  region.rs  resource.rs  rng.rs  stack.rs  team_configuration.rs  unordered_cards.rs
game_rules_engine/src/game/state/effect/: special.rs
game_rules_engine/src/game/state/mutation/: create_card.rs  create_pack.rs  create_permanent.rs  move_card.rs  pass_priority.rs  phase_transition.rs  player.rs  player_mutations.rs  remove_card.rs  set_player_passed_priority.rs  set_resource_tapped.rs  stack_add_priority.rs  stack_clear_priority.rs  stack_pass_priority.rs
grpc_server/: Cargo.toml  build.rs
grpc_server/src/: coordinator_service.rs  server.rs
grpc_server/src/proto/: algomancer.proto
http_server/: Cargo.toml
http_server/src/: coordinator_routes.rs  error.rs  main.rs  messages.rs  runner_routes.rs  ws_helpers.rs
http_server/src/models/: agent.rs  lobby.rs  migration.rs  mod.rs  registration.rs
http_server/src/services/: coordinator_service.rs  mod.rs
http_server/src/ws/: mod.rs
python_card_parser/: .gitignore  Card.g4  _build.sh  _gui.sh  _install.sh  _run.sh  parser.py  requirements.txt  test_input.txt  test_parser_on_all.py  visitor.py
python_card_parser/helper_scripts/: de_duplicate.py  similarity.py
python_card_parser/lib/: Card.interp  Card.tokens  CardLexer.interp  CardLexer.py  CardLexer.tokens  CardListener.py  CardParser.py  CardVisitor.py
python_card_parser/tests/: A_Fast_Pile_of_Rocks.txt  A_Pile_of_Rubbish.txt  A_Pile_of_Runes.txt  Abduct.txt  Aberrant_Populace.txt  Aberrant_Statweaver.txt  Accelerated_Germination.txt  Accumulated_Nucleation.txt  Adversary_of_the_Deep.txt  Aether_Channeler.txt  Aethercap_Siphoner.txt  Aetherflux_Golem.txt  All-Consuming_Blaze.txt  All-Consuming_Blight.txt  Amphivore.txt  Ancient_One.txt  Animated_Spark.txt  Arc_Lightning.txt  Arcane_Concentrator.txt  Arcane_Echo.txt  Astral_Painseeker.txt  Astral_Tidewraith.txt  Astralith.txt  Auric_Ascendant.txt  Automaton_of_Abundance.txt  Awoken_Tomb.txt  Battle.txt  Bellowing_Boulder.txt  Biomass_Devourer.txt  Bioremediation.txt  Biotoxicity.txt  Bloated_Manablub.txt  Bloodwind_Revenant.txt  Bloomcaster.txt  Body_Swap.txt  Boon_of_Protection.txt  Boreal_Wanderer.txt  Borrower_of_Forms.txt  Bripp.txt  Burgeon.txt  (+283 more)
resources/: core_cards.json
src/: main.rs  wrap_index.rs
src/game/: action.rs  card.rs  effect.rs  game_builder.rs  mod.rs  player.rs  resource.rs  state.rs  zone.rs
src/game/action/: combat.rs  draft.rs  mana_phase_actions.rs  pass_priority.rs  play_card.rs
src/game/effect/: special.rs
src/game/state/: card.rs  deck.rs  discard.rs  effect.rs  formation.rs  hand.rs  pack.rs  permanent.rs  player.rs  priority.rs  progression.rs  region.rs  resource.rs  rng.rs  stack.rs  team.rs  zone.rs
src/game/state/effect/: special.rs
websocket_server/: Cargo.toml
