[package]
name = "algocore"
version = "0.1.0"
edition = "2021"
authors = ["Derek Hemingson"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [] }