[package]
name = "algomanserver"
version = "0.1.0"
edition = "2021"
authors = ["Derek Hemingson"]


[dependencies]
algomancer_gre = { path = "../game_rules_engine"}
tokio = { version = "1.35.1", features = ["full"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [] }
