[package]
name = "algoserver"
version = "0.1.0"
edition = "2021"
authors = ["Derek Hemingson"]

[[bin]]
name = "algo-server"
path = "src/server.rs"

[[bin]]
name = "algo-client"
path = "src/client.rs"

[dependencies]
tonic = "0.10.2"
tokio = { version = "1.35.1", features = ["full"] }
prost = "0.12.3"

[build-dependencies]
tonic-build = "0.10.2"
