[package]
name = "cli"
version = "0.1.0"
edition = "2021"
authors = ["Derek Hemingson"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game_rules_engine = { path = "../game_rules_engine" }
serde_json = "1.0.108"
clap = { version = "4.4.7", features = ["derive", "cargo"] }
