[package]
name = "algomancer_cli"
version = "0.1.0"
edition = "2021"
authors = ["Derek Hemingson"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algomancer_gre = { path = "../game_rules_engine" }
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0.108"
clap = { version = "4.4.7", features = ["derive", "cargo"] }

[[bin]]
name = "algomancer"
path = "src/main.rs"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

