[package]
name = "grpc_server"
version = "0.1.0"
edition = "2021"
authors = ["Derek Hemingson"]

[[bin]]
name = "grpc_server"
path = "src/server.rs"

[dependencies]
algomancer_gre = { path = "../game_rules_engine"}
algomanserver = { path = "../algomanserver"}
tonic = "0.11.0"
tokio = { version = "1.35.1", features = ["full"] }
prost = "0.12.3"
tonic-reflection = "0.11.0"
tonic-web = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
