[package]
name = "websocket_server"
version = "0.1.0"
edition = "2021"
authors = ["Derek Hemingson"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"]}
warp = { version = "0.3.7", features = ["websocket"] }
futures-util = "0.3.30"
tokio-stream = "0.1.15"
pretty_env_logger = "0.5"
